--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-reanimated": "^3.17.0",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0"
   },
