--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.78.0",
     "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-google-mobile-ads": "^14.9.1",
     "react-native-reanimated": "^3.17.0",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1",
